# soundings

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  LICENSE.md  Makefile  PLAN.md  README.md  STATE.md  indicators.yaml  soundings-minimal.yaml  soundings.yaml  v1-orchestration-and-capture.md  v1.5-just-in-time-interfaces.md  v2-context-layer.md  v3-contribution-layer.md
server/: README.md  alembic.ini  pyproject.toml
server/soundings/: app.py
server/soundings/adapters/: base.py  passthrough_base.py  protocol.py  source_ref_factory.py
server/soundings/adapters/charity_commission/: __init__.py  area_mapping.py  client.py  loader.py  mapping.py
server/soundings/adapters/companies_house/: __init__.py  client.py  loader.py
server/soundings/adapters/dfe_explore/: adapter.py  (+2 more)
server/soundings/alerts/: __init__.py  resend.py
server/soundings/ask/: blocks.py  dispatcher.py  orchestrator.py  prompts.py
server/soundings/cache/: answer_cache.py  source_cache.py
server/soundings/capture/: consent.py  context.py  middleware.py  rate_limit.py  raw_writer.py  replay.py  retention.py  sanitiser_worker.py
server/soundings/catalogue/: loader.py  models.py
server/soundings/contracts/: civil_society.py  comparison.py  indicator_value.py  organisation.py  source_ref.py  trend.py
server/soundings/core/: config.py
server/soundings/db/: engine.py
server/soundings/geography/: service.py
server/soundings/http/: ask.py  capture.py  catalogue.py  corpus.py  errors.py  health.py  place_geometry.py  session.py  sources.py  tools.py
server/soundings/loader/: retry.py  run.py
server/soundings/mcp/: server.py
server/soundings/orchestration/: errors.py  orchestrator.py  registry.py
server/soundings/pre_warmer/: run.py
server/soundings/publication/: cli.py  manifest.py  snapshot.py  writers.py
server/soundings/seed/: run.py
server/soundings/tools/: compare_places.py  detect_insights.py  find_organisations_in_place.py  find_place.py  get_civil_society_profile.py  get_indicators.py  get_peer_distribution.py  get_place_profile.py  get_sub_areas.py  get_trend.py
server/tests/: conftest.py  test_360g_adapter.py  test_360g_client.py  test_360g_pre_warm.py  test_adapter_registry.py  test_adapter_registry_coverage.py  test_alerts.py  test_answer_cache.py  test_aps_adapter.py  test_ask_blocks.py  test_ask_dispatcher.py  test_ask_live.py  test_ask_orchestrator.py  test_ask_prompts.py  test_ask_route.py  test_cache_corpus_models.py  test_capture_consent.py  test_capture_context.py  test_capture_feedback.py  test_capture_middleware.py  test_capture_rate_limit.py  test_capture_replay.py  test_capture_retention.py  test_catalogue_loader.py  test_catalogue_models.py  test_catalogue_startup.py  test_catalogue_yaml_load.py  test_cc_client.py  test_cc_client_extra_fields.py  test_cc_client_helpers.py  test_cc_indicator_aggregation.py  test_cc_loader.py  test_cc_mapping.py  test_census_loader.py  test_civil_society_contracts.py  test_companies_house_client.py  test_companies_house_live.py  test_companies_house_loader.py  test_compare_places.py  test_comparison_contracts.py  (+109 more)
server/tests/live/: conftest.py  test_360g_live.py  test_aps_live.py  test_cc_live.py  test_census_live.py  test_dfe_live.py  test_fingertips_live.py  test_ftc_live.py  test_imd_live.py  test_mye_live.py  test_police_uk_live.py  test_statxplore_live.py
(+188 files in other folders)
