[project]
name = "soundings"
version = "0.0.1"
description = "Soundings server — MCP + FastAPI orchestration over UK open data"
requires-python = ">=3.12"
license = { file = "../LICENSE-AGPL-3.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "anthropic>=0.40",
    "aiolimiter>=1.2",
    "geoalchemy2>=0.16",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "apscheduler>=3.10",
    "spacy>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Test fixtures often have long SQL/JSON literals — relax line length there.
"tests/**" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = [
    "S101",      # assert in tests is fine
    "ASYNC109",  # we want the explicit timeout param on IndicatorOrchestrator.fetch
    "ASYNC110",  # `while True: await asyncio.sleep(N)` is fine in long-running daemons
    "ASYNC221",  # subprocess in publication CLI is one-shot; blocking is fine
    "ASYNC230",  # open() in async — same reasoning, batch jobs not request hot path
    "ASYNC240",  # pathlib in async — same reasoning
    "RUF002",    # docstring "×" / "–" symbols are intentional in tables / specs
    "RUF003",    # comment "×" / "–" symbols are intentional in tables / specs
]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "openpyxl"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: hits real upstream APIs; nightly only",
    "integration: requires running Postgres",
]
